[gd_scene load_steps=17 format=3 uid="uid://rdg3a2yq5dkv"]

[ext_resource type="Script" uid="uid://dijvcd73dcfc8" path="res://entity/totems/fire_totem.gd" id="1_a88hw"]
[ext_resource type="Texture2D" uid="uid://din643sy6lmqw" path="res://resources/images/totems/fire/fire_totem.png" id="2_2sq61"]
[ext_resource type="Texture2D" uid="uid://mm5wmj2ew51a" path="res://resources/images/totems/fire/fire_anime/fire_1.png" id="3_o0ngj"]
[ext_resource type="Texture2D" uid="uid://cwf5m2o6voau2" path="res://resources/images/totems/fire/fire_anime/fire_2.png" id="4_v7sqt"]
[ext_resource type="Texture2D" uid="uid://d23d5ol02a6e1" path="res://resources/images/totems/fire/fire_anime/fire_3.png" id="5_2bmtp"]
[ext_resource type="Texture2D" uid="uid://b35ib5tq4d4o0" path="res://resources/images/totems/fire/fire_anime/fire_4.png" id="6_aht33"]
[ext_resource type="Texture2D" uid="uid://dlmjkcpfu4ob8" path="res://resources/images/totems/fire/fire_anime/fire_5.png" id="7_vvmtf"]
[ext_resource type="Texture2D" uid="uid://dsb5v6k7bl6tb" path="res://resources/images/totems/fire/fire_anime/fire_6.png" id="8_3tdae"]
[ext_resource type="Texture2D" uid="uid://bh8sideeswjfv" path="res://resources/images/totems/fire/fire_anime/fire_7.png" id="9_0ixmh"]
[ext_resource type="Texture2D" uid="uid://cptk47biuu208" path="res://resources/images/totems/fire/fire_anime/fire_8.png" id="10_c3cqx"]
[ext_resource type="Texture2D" uid="uid://bueymhphxjise" path="res://resources/images/totems/fire/fire_anime/fire_9.png" id="11_ldyrh"]
[ext_resource type="Texture2D" uid="uid://bcflg3yqeepqf" path="res://resources/images/totems/fire/fire_anime/fire_10.png" id="12_w32yh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3l66p"]
size = Vector2(75.75, 35)

[sub_resource type="Animation" id="Animation_dyfrw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlameRoot/FlameSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_o0ngj")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlameRoot/FlameArea/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(72, 4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlameRoot/FlameArea/CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(75.75, 35)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FlameRoot/FlameArea/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_x88gl"]
resource_name = "start_flame"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlameRoot/FlameSprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("3_o0ngj"), ExtResource("4_v7sqt"), ExtResource("5_2bmtp"), ExtResource("6_aht33"), ExtResource("7_vvmtf"), ExtResource("8_3tdae"), ExtResource("9_0ixmh"), ExtResource("10_c3cqx"), ExtResource("11_ldyrh"), ExtResource("12_w32yh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlameRoot/FlameArea/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(72, 4), Vector2(93.5625, 11.75), Vector2(146.062, 8.5), Vector2(228.031, -11.75), Vector2(249, -12.5), Vector2(252.5, -7.5), Vector2(233.5, -7.5), Vector2(238, -0.5), Vector2(238, -8), Vector2(270.5, -12.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlameRoot/FlameArea/CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(75.75, 35), Vector2(122.875, 60.5), Vector2(227.875, 67), Vector2(371.938, 93.5), Vector2(434, 105), Vector2(441, 115), Vector2(403, 115), Vector2(264, 85), Vector2(264, 100), Vector2(161, 91)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("FlameRoot/FlameArea/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sxb6t"]
_data = {
&"RESET": SubResource("Animation_dyfrw"),
&"start_flame": SubResource("Animation_x88gl")
}

[node name="FireTotem" type="Node2D"]
script = ExtResource("1_a88hw")

[node name="Totem" type="Sprite2D" parent="."]
texture = ExtResource("2_2sq61")

[node name="FlameRoot" type="Node2D" parent="."]

[node name="FlameSprite" type="Sprite2D" parent="FlameRoot"]
position = Vector2(224, -5)
texture = ExtResource("3_o0ngj")

[node name="FlameArea" type="Area2D" parent="FlameRoot"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlameRoot/FlameArea"]
position = Vector2(72, 4)
shape = SubResource("RectangleShape2D_3l66p")
disabled = true

[node name="FlameDuration" type="Timer" parent="."]

[node name="FireTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sxb6t")
}

[connection signal="body_entered" from="FlameRoot/FlameArea" to="." method="_on_flame_area_body_entered"]
[connection signal="timeout" from="FlameDuration" to="." method="_on_flame_duration_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_fire_timer_timeout"]
